# introduction-to-python-for-computational-science-and-engineering

./: .buildinfo  .dockerignore  .gitignore  .travis.yml  01-introduction.html  01-introduction.ipynb  02-powerful-calculator.html  02-powerful-calculator.ipynb  03-data-types-structures.html  03-data-types-structures.ipynb  04-introspection.html  04-introspection.ipynb  05-input-output.html  05-input-output.ipynb  06-control-flow.html  06-control-flow.ipynb  07-functions-modules.html  07-functions-modules.ipynb  08-functional-tools.html  08-functional-tools.ipynb  09-common-tasks.html  09-common-tasks.ipynb  10-matlab-to-python.html  10-matlab-to-python.ipynb  11-python-shells.html  11-python-shells.ipynb  12-symbolic-computation.html  12-symbolic-computation.ipynb  13-numeric-computation.html  13-numeric-computation.ipynb  14-numpy.html  14-numpy.ipynb  15-visualising-data.html  15-visualising-data.ipynb  16-scipy.html  16-scipy.ipynb  17-next-steps.ipynb  17-pandas.html  17-pandas.ipynb  18-environments.html  (+24 more)
_sources/: 03-data-types-structures.ipynb  04-introspection.ipynb  05-input-output.ipynb  08-functional-tools.ipynb  10-matlab-to-python.ipynb  12-symbolic-computation.ipynb  15-visualising-data.ipynb  16-scipy.ipynb  17-pandas.ipynb  18-environments.ipynb  18-next-steps.ipynb  99-changes.ipynb  index.ipynb
binder/: Dockerfile  Makefile  info.org  info.txt  postBuild  requirements.txt
book/: 01-introduction.ipynb  02-powerful-calculator.ipynb  03-data-types-structures.ipynb  04-introspection.ipynb  05-input-output.ipynb  06-control-flow.ipynb  07-functions-modules.ipynb  08-functional-tools.ipynb  11-python-shells.ipynb  12-symbolic-computation.ipynb  13-numeric-computation.ipynb  14-numpy.ipynb  15-visualising-data.ipynb  16-scipy.ipynb  17-pandas.ipynb  18-environments.ipynb  18-next-steps.ipynb  99-changes.ipynb  _config.yml  _toc.yml  dev.md  index.ipynb  info.org  opening.md  todo.org  xx-data-management.ipynb
docs/: 14-numpy.html  (+20 more)
(+76 files in other folders)
