[tool.poetry]
name = "Introduction to Python for Computational Science and Engineering"
version = "0.1.1"
description = ""
authors = ["Hans Fangohr <hans.fangohr@mpsd.mpg.de>"]

[tool.poetry.dependencies]
matplotlib = "^3.4.3"
numpy = "^1.20.3"
pexpect = "^4.8.0"
scipy = "^1.7.1"
pandas = "^1.3.4"
sympy = "^1.9"

[tool.poetry.dev-dependencies]
#jupyter-book = {git = "https://github.com/executablebooks/jupyter-book", rev = "f2b846838c35529581d1619fc4086b1b6e70c0e8"}
jupyter-book = "^0.12.1"
pyppeteer = "^0.2.2"
jupytext = "^1.6.0"
nbval = "^0.9.6"
sphinxcontrib-bibtex = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
